<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/set"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:src="@mipmap/logo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"/>
    <EditText
        android:id="@+id/input_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_set_edit"
        android:hint="@string/hint_input_account"
        android:textColorHint="@color/light_gray"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:padding="5dp"
        android:drawableLeft="@mipmap/input_account"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp">
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_set_edit"
            android:hint="@string/hint_input_password"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:drawableLeft="@mipmap/input_password"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@null"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/set_visibility"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_login_now"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/register_now"/>
    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_login_now"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/login_now"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/other_ways_login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/light_gray"
            android:drawableTop="@mipmap/logo_alipay"
            android:drawablePadding="5dp"
            android:text="@string/ali_pay"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/light_gray"
            android:drawableTop="@mipmap/logo_weixin"
            android:drawablePadding="5dp"
            android:text="@string/weixin"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/light_gray"
            android:drawableTop="@mipmap/logo_weibo"
            android:drawablePadding="5dp"
            android:text="@string/weibo"/>
    </LinearLayout>
</LinearLayout>
