<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
<!--举报导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/meirenyu_bg_green">
        <ImageView
            android:id="@+id/jubao_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fanhui"
            android:layout_centerVertical="true"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jubao"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"/>
        <TextView
            android:id="@+id/jubao_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingRight="10dp"/>
    </RelativeLayout>
    <!--举报内容输入框-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="#d4d4d4"
        android:text="请选择举报原因"
        android:id="@+id/textView" />
    <CheckBox
        android:id="@+id/jubao_type_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="色情低俗"
        android:textColor="#363636"
        android:background="#f5f5f5"
        android:button="@null"
        android:padding="12dp"
        android:checked="false"
        android:drawableRight="@drawable/jubao_type_select"/>
    <CheckBox
        android:id="@+id/jubao_type_two"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jubao_type_saorao"
        android:textColor="#363636"
        android:background="#f5f5f5"
        android:button="@null"
        android:padding="12dp"
        android:checked="false"
        android:drawableRight="@drawable/jubao_type_select"/>
    <CheckBox
        android:id="@+id/jubao_type_three"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jubao_type_qizha"
        android:textColor="#363636"
        android:background="#f5f5f5"
        android:button="@null"
        android:padding="12dp"
        android:checked="false"
        android:drawableRight="@drawable/jubao_type_select"/>

    <CheckBox
        android:id="@+id/jubao_type_furth"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jubao_type_qinquan"
        android:textColor="#363636"
        android:background="#f5f5f5"
        android:button="@null"
        android:padding="12dp"
        android:checked="false"
        android:drawableRight="@drawable/jubao_type_select"/>

    <CheckBox
        android:id="@+id/jubao_type_five"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jubao_type_other"
        android:textColor="#363636"
        android:background="#f5f5f5"
        android:button="@null"
        android:padding="12dp"
        android:checked="false"
        android:drawableRight="@drawable/jubao_type_select"/>
</LinearLayout>