<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/share_app"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_title"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="30dp"
        android:id="@+id/imageView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_ways"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_btn_weixin"
        android:layout_margin="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_to_weixin_friends"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/weixin"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_to_friend_zone"
        android:background="@drawable/bg_btn_zone"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_margin="12dp"/>
</LinearLayout>
