<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/bind_weibo"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:src="@mipmap/logo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"/>
    <EditText
        android:id="@+id/input_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_set_edit"
        android:hint="@string/hint_input_account"
        android:textColorHint="@color/light_gray"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:padding="5dp"
        android:drawableLeft="@mipmap/input_account"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_set_edit"
            android:hint="@string/hint_input_password"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:drawableLeft="@mipmap/input_password"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@null"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/set_visibility"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/input_verification"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bg_set_edit"
            android:hint="@string/hint_input_verification_code"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg_set_edit"
            android:textColor="@color/main_blue"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/get_verification_code"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/check_box_agree"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:text="@string/read_and_agree"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_login_now"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/bind_now"/>
</LinearLayout>
