<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/my_plan"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add"
            android:layout_alignParentRight="true"
            android:padding="12dp"/>
    </RelativeLayout>
    <!--选择时间-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_plan_time"
        android:padding="12dp"
        android:textSize="18sp" />
    <!--日期选择器-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="需要日期选择器"
        android:gravity="center"

        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_plan_title"
        android:padding="12dp"
        android:textSize="18sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_my_plan_edit"
        android:hint="title"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_plan_content"
        android:padding="12dp"
        android:textSize="18sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_my_plan_edit"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>
</LinearLayout>
