<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/meirenyu_bg_green">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/fanhui"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="11dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_shop"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/problem_imgae"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shangcheng_problem"
                android:textSize="15sp"
                android:textColor="@color/textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shuo_ye"
                android:drawableTop="@mipmap/shouye_green"
                android:gravity="center_horizontal"
                android:textColor="@color/meirenyu_bg_green"
                android:background="@color/jiesuan_bg_grey"
                android:paddingTop="9dp"
                android:paddingBottom="4dp"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gouwu_che"
                android:drawableTop="@mipmap/gouwuche"
                android:gravity="center_horizontal"
                android:textColor="@color/textcolor"
                android:background="@color/jiesuan_bg_grey"
                android:paddingTop="9dp"
                android:paddingBottom="4dp"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ding_dan"
                android:drawableTop="@mipmap/dingdan"
                android:gravity="center_horizontal"
                android:textColor="@color/textcolor"
                android:background="@color/jiesuan_bg_grey"
                android:paddingTop="9dp"
                android:paddingBottom="4dp"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zaixiankefu"
                android:drawableTop="@mipmap/zaixiankefu"
                android:gravity="center_horizontal"
                android:textColor="@color/textcolor"
                android:background="@color/jiesuan_bg_grey"
                android:paddingTop="9dp"
                android:paddingBottom="4dp"
                />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
